# IronFamily.FileEngine

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Directory.Build.props  README.md  SECURITY.md
.github/: CODEOWNERS  pull_request_template.md  release.yml  repo-topics.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  determinism.yml  evidence.yml  git_author.yml  git_author_gate.yml  incremental-gates.yml  megabench_determinism.yml  megabench_sanity.yml  native.yml  perf_budget_gate.yml
bench/: reproduce.ps1  reproduce.sh
bench/baselines/: baseline.json  determinism.json
bench/budgets/: budgets.json
docs/: BENCHMARK_RESULTS_2026-03-25.md  ENGINE_TRUTH_SUMMARY.md  FAMILY_ARCHITECTURE_TRUTH.md  FAMILY_EVIDENCE_STANDARD.md  FAMILY_PROFILE_MODEL.md  FAMILY_RUNTIME_MODEL.md  FAMILY_STATUS_MATRIX.md  FAMILY_TEST_QUALITY_MATRIX.md  ICFG_COMPATIBILITY.md  ICFG_EVIDENCE_MATRIX.md  ICFG_SCHEMA_AND_TYPES.md  ICFG_SPEC.md  ILOG_AUDITED_ARCHIVE_PROPOSAL.md  ILOG_COMPATIBILITY.md  ILOG_EVIDENCE_MATRIX.md  ILOG_PROFILE_MATRIX.md  ILOG_SCHEMA_AND_TYPES.md  ILOG_SPEC.md  IUPD_CLOSURE_STATUS.md  IUPD_COMPATIBILITY.md  IUPD_EVIDENCE_MATRIX.md  IUPD_GAPS.md  IUPD_LIMITS_AND_EVIDENCE.md  IUPD_NATIVE_C_STATUS.md  IUPD_PROFILE_MATRIX.md  IUPD_SPEC.md  IUPD_STATE.md  IUPD_STRUCTURE_AND_VALIDATION.md  NATIVE_C_API.md  NATIVE_C_EXAMPLES.md  NATIVE_C_PARITY_MATRIX.md  PROJECT_STATE_MEGA_AUDIT.md  README.md  RELEASE_PROCESS.md
docs/wiki/: Benchmarking.md  CI-CD.md  Home.md  Repository-Structure.md
incremental_vectors/: manifest.json
incremental_vectors/refusal_01_wrong_base_hash/: package.iupd
incremental_vectors/refusal_02_unknown_algorithm/: package.iupd
incremental_vectors/refusal_03_corrupted_crc32/: package.iupd
incremental_vectors/refusal_04_target_hash_mismatch/: package.iupd
incremental_vectors/refusal_05_missing_metadata/: package.iupd
incremental_vectors/success_01_delta_v1_simple/: package.iupd
incremental_vectors/success_02_irondel2_simple/: package.iupd
incremental_vectors/success_03_delta_v1_medium/: package.iupd
incremental_vectors/success_04_irondel2_medium/: package.iupd
incremental_vectors/success_05_delta_v1_no_target/: package.iupd
libs/bjv-c/: CMakeLists.txt
libs/bjv-cpp/: CMakeLists.txt  README.md
libs/bjv-cpp/include/: bjv.hpp
libs/bjv-cpp/src/: bjv.cpp
libs/bjv-cpp/tests/: test_bjv_cpp.cpp  test_wrapper.cpp
libs/ironcfg-c/: CMakeLists.txt  README.md
libs/ironcfg-c/include/ironcfg/: bjx.h  icfx.h  icxs.h  ilog.h  ironcfg.h  ironcfg_common.h  ironcfg_encode.h
libs/ironcfg-c/legacy/bjv-c/: CMakeLists.txt
libs/ironcfg-c/legacy/bjv-c/include/: bjv.h
libs/ironcfg-c/legacy/bjv-c/src/: bjv.c
libs/ironcfg-c/legacy/bjv-c/tests/: test_bjv_c.c
libs/ironcfg-c/src/: bjx.c  icf2.c  icfx.c  icxs.c  ilog.c  ironcfg_common.c  ironcfg_open.c  ironcfg_validate.c  ironcfg_view.c  iupd.c
libs/ironcfg-c/tests/: test_bjx_basic.c  test_bjx_validation.c  test_icf2_golden.c  test_icfx_golden.c  test_icfx_vsp_indexed.c  test_icxs_basic.c  test_icxs_golden.c  test_ilog_basic.c  test_ilog_validation.c  test_ironcfg.c  test_ironcfg_determinism.c  test_iupd_apply.c  test_iupd_basic.c  test_iupd_validation.c
libs/ironcfg-c/tools/: crc_diagnostic.c  icxs_diagnostic.c  parity_icf2.c  sanity_check.c  test_crc.c
libs/ironcfg-cpp/: CMakeLists.txt
libs/ironcfg-cpp/include/ironcfg/: icfx.hpp  icxs.hpp
libs/ironconfig-dotnet/: CHANGELOG_V2_6.md  IronConfig.sln
native/: CMakeLists.txt
native/ironfamily_c/: CMakeLists.txt  README.md
native/ironfamily_c/include/ironcfg/: icf2.h  ironcfg_view.h  iupd.h
native/ironfamily_c/include/ironfamily/: crc32.h  crypto_ed25519.h  delta2_apply.h  delta2_spec_min.h  delta_v1_spec_min.h  diff_apply.h  io.h  ironfamily.h  iupd_errors.h  iupd_incremental_metadata.h  iupd_reader.h  iupd_v2_spec_min.h  ota_apply.h
native/ironfamily_c/src/: crc32.c  delta2_apply.c  diff_apply.c  ironcfg_common.c  ironcfg_encode.c  ironcfg_open.c  ironcfg_validate.c  ironcfg_view.c  ironfamily_dummy.c  iupd_errors.c  iupd_incremental_metadata.c  iupd_reader.c  ota_apply.c
native/tests/: CMakeLists.txt  derive_pubkey.c  file_reader.c  file_reader.h  file_writer.c  test_blake3_pubkey.c  test_byte_diff_trace.c  test_crc32_kat.c  test_delta2_vectors.c  test_diff_vectors.c  test_dummy.c  test_icfg_debug.c  test_icfg_golden_vectors.c  test_incremental_metadata.c  test_incremental_vectors.c  test_incremental_vectors_fixed.c  test_ironcfg.c  test_ironcfg_determinism.c  test_iupd_vectors.c  test_no_target_debug.c  test_ota_bundle.c  test_patch2_crc32.c  test_pubkey_hex.txt  test_sig_verify_debug.c  test_success05_only.c
releases/: v0.1.0-internal.md
specs/: IRONDEL2_SPEC_MIN.md
tests/IronFamily.OtaCli.Tests/: IronFamily.OtaCli.Tests.csproj  OtaCliE2ETests.cs
tools/: Icf2VectorGenerator.cs  Icf2VectorGenerator.csproj  dataset_generator.csx  generate_golden_vectors.py  icfg_golden_vector_gen.cs
tools/CRC32_KAT/: CRC32_KAT.csproj  Program.cs
tools/IronFamily.OtaCli/: IronFamily.OtaCli.csproj  Program.cs  README.md
tools/IronFamily.Vectors/: IronFamily.Vectors.csproj  Program.cs
tools/bench/: compare_baseline.ps1
tools/bench-datasets/: Program.cs  bench-datasets.csproj
tools/bench_deps/: README.md
tools/bench_profiles/: BenchmarkProfiles.cs  BenchmarkProfiles.csproj  BenchmarkProfilesStabilized.cs
tools/datasets/: DatasetGenerator.csproj  Program.cs
tools/delta-matrix/: Program.cs
tools/diagnostics/: Icf2CrcDiagnostic.csproj  TestCrc32Format.csproj  VerifyBothLocations.cs  VerifyBothLocations.csproj
tools/diff-bench/: Program.cs  diff-bench.csproj  diff_v1_comparison.csv
tools/docs_truth_gate/: README.md  verify_docs_truth.sh
tools/evidence_verifier/: README.md  verify_evidence.ps1  verify_evidence.sh
tools/gauntlet/: DeterminismProver.cs  DeterminismProver.csproj  generate_memory_report.ps1  run_determinism_20x.sh  run_determinism_ci.ps1  run_determinism_ci.sh  test-perf.ps1  test-phase.ps1  test-unit.ps1
(+484 files in other folders)
